JPAQueryBuilder support in Project. (#2212)
Signed-off-by: Tomáš Kraus <tomas.kraus@oracle.com>